Update the logic based on integration test